--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,19 @@
 /* .bg-blue-600{
   color: #004aac !important;
 } */
+
+
+.loader {
+  border: 3px solid #fff;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
